fixing dropdown spacing

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
 
 header * {
     display: inline;
-    height: 50px;
+    /*height: 50px;*/
 }
 
 header ul {
@@ -142,12 +142,9 @@ header a {
 
 /* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px;
   border: none;
-  height: 0px;
   outline: none;
-  color: white;
-  padding: 0px 16px;
+  padding: 16px 16px;
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
